rydde (#1453)
Co-authored-by: Jan-Olav Eide <jan-olav.eide@nav.no>