@@ -6,7 +6,6 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -158,7 +157,7 @@ public class EngangsstønadPdfGenerator implements MappablePdfGenerator {
     private static List<TabellRad> tabellRader(List<Pair<String, String>> rader) {
         return rader.stream()
                 .map(r -> new TabellRad(r.getFirst(), r.getSecond(), null))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String fødselssted(Medlemsskap medlemsskap, Engangsstønad stønad) {
